<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-70dp"
        android:layout_marginTop="-310dp"
        android:layout_marginEnd="-70dp"
        android:background="@drawable/top"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:elevation="20dp"
        android:id="@+id/round_logo"
        android:src="@drawable/round_logo">
    </de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/round_logo"
        android:layout_marginTop="50dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custome_edittext"
            android:padding="15dp"
            android:hint="@string/user_id"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/green"
            android:textColor="@color/green"
            android:elevation="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custome_edittext"
            android:padding="15dp"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:textColorHint="@color/green"
            android:textColor="@color/green"
            android:elevation="10dp"/>

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:padding="5dp"
            android:layout_marginEnd="33dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green"
            android:layout_marginLeft="100dp"
            >
        </TextView>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/custom_button"
            android:layout_marginTop="30dp"
            android:text="Login"
            android:textColor="@color/white"
            android:transitionName="SEND OTP" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/join_now"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_now1"
                android:textSize="17dp"
                android:textColor="@color/green"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/samrudhi_solar_logo" />
    </LinearLayout>
</RelativeLayout>