<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-70dp"
        android:layout_marginTop="-310dp"
        android:layout_marginEnd="-70dp"
        android:background="@drawable/top" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:elevation="20dp"
        android:id="@+id/round_logo"
        android:src="@drawable/round_logo">
    </de.hdodenhof.circleimageview.CircleImageView>

    <FrameLayout
        android:id="@+id/mainScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/round_logo">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:src="@drawable/signup1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delears_details"
                android:textSize="30dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/green"/>

            <EditText
                android:id="@+id/user_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custome_edittext"
                android:padding="15dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColorHint="@color/green"
                android:textColor="@color/green"
                android:elevation="10dp"
                android:autofillHints="name"/>

            <EditText
                android:id="@+id/user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custome_edittext"
                android:padding="15dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColorHint="@color/green"
                android:textColor="@color/green"
                android:elevation="10dp"
                android:autofillHints="name"/>

            <Button
                android:id="@+id/btn1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/next_btn"
                android:layout_gravity="center"
                android:layout_marginVertical="40dp"/>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/samrudhi_solar_logo" />
    </LinearLayout>

</RelativeLayout>