<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity2"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-70dp"
        android:layout_marginTop="-310dp"
        android:layout_marginEnd="-70dp"
        android:background="@drawable/top" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:elevation="20dp"
        android:id="@+id/round_logo"
        android:src="@drawable/round_logo">
    </de.hdodenhof.circleimageview.CircleImageView>

    <FrameLayout
        android:id="@+id/mainScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/round_logo">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:src="@drawable/signup2" />

            <TextView
                android:id="@+id/dealer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/delears_details"
                android:textColor="@color/green"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:elevation="20dp"
                />


            <EditText
                android:id="@+id/addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custome_edittext"
                android:padding="15dp"
                android:hint="@string/addr"
                android:inputType="text"
                android:textColorHint="@color/green"
                android:textColor="@color/green"
                android:elevation="10dp"
                android:autofillHints="postalAddress"/>

            <TextView
                android:id="@+id/pin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/pin"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:elevation="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:elevation="20dp">

                <EditText
                    android:id="@+id/pin1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/custome_edittext"
                    android:elevation="20dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/pin2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/custome_edittext"
                    android:layout_marginStart="10dp"
                    android:elevation="20dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/pin3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/custome_edittext"
                    android:layout_marginStart="10dp"
                    android:elevation="20dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/pin4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/custome_edittext"
                    android:layout_marginStart="10dp"
                    android:elevation="20dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/pin5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/custome_edittext"
                    android:layout_marginStart="10dp"
                    android:elevation="20dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/pin6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/custome_edittext"
                    android:layout_marginStart="10dp"
                    android:elevation="20dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black" />


            </LinearLayout>


            <Button
                android:id="@+id/btn2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/next_btn"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/samrudhi_solar_logo" />
    </LinearLayout>


</RelativeLayout>